<resources>
    <string name="app_name">Glemmekasse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="last_name">Last Name</string>
    <string name="save_changes">Save Changes</string>
    <string name="create_group">Create Group</string>
    <string name="description">DESCRIPTION</string>
    <string name="image">IMAGE</string>
    <string name="upload">Upload</string>
    <string name="cover_photo">COVER PHOTO</string>
    <string name="choose_privacy">Choose Privacy</string>
    <string name="school_name">SCHOOL NAME</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="gosford_hill_school">Gosford Hill School</string>
    <string name="date">DATE</string>
    <string name="full_name">Full Name</string>
    <string name="save">Save</string>
    <string name="forget_password">Forget Password</string>
    <string name="email">Email</string>
    <string name="send_email">Send Email</string>
    <string name="your_groups">Your Groups</string>

    <string name="glemmekasse">GLEMMEKASSE</string>
    <string name="first_place_where_you_searching">First place where you searching</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_passwordlogin">Forgot Password?</string>
    <string name="log_in">LOG IN</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="sign_up">SIGN UP</string>
    <string name="time">TIME</string>
    <string name="register">REGISTER</string>
    <string name="first_name">First Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="discover">Discover</string>
    <string name="join_group_request">Group Join Request</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="change_cover_photo">Change Cover Photo</string>
    <string name="phone_no">Phone No</string>
    <string name="update">Update</string>
    <string name="notifications_small">Notifications</string>
    <string name="create_post">Create Post</string>
    <string name="this_is_mine">This is mine</string>
    <string name="i_know_whom_this_belongs_to">I know whom this belongs to</string>
    <string name="claim">Claim</string>
    <string name="notification_text">Tahir posted in Gosford Hill School</string>
    <string name="accept">Accept</string>
    <string name="i_found_this_on_desk_in_9th_class">I found this on desk in 9th class</string>
    <string name="see_all">See All</string>
    <string name="_9_28_2020">9/28/2020</string>
    <string name="_3_39_pm">3:39 PM</string>
    <string name="gosfor_hill_school">Gosfor Hill School</string>
    <string name="posted_in"> posted in </string>
    <string name="khaadi">Khaadi</string>
    <string name="paul_walker">Paul Walker</string>
    <string name="join">Join</string>
    <string name="lorum_ipsum_lorum_ipsum_lorum_ipsum_lorum_ipsum_lorum_ipsum">Lorum Ipsum Lorum Ipsum Lorum Ipsum Lorum Ipsum Lorum Ipsum</string>
    <string name="new_password">New Password</string>
</resources>