<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".views.LoginActivity">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:src="@drawable/logo"
                />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/glemmekasse"
               android:textSize="30sp"
               android:textStyle="bold"
               android:layout_gravity="center"
               android:textColor="@color/colorPrimary"
               />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_place_where_you_searching"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:inputType="text"
                    android:id="@+id/username"
                    android:hint="@string/username"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="70dp"
                    android:layout_marginRight="70dp"
                    android:padding="10dp"
                    android:background="@drawable/text_background"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:id="@+id/password"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="70dp"
                    android:layout_marginRight="70dp"
                    android:inputType="textPassword"
                    android:background="@drawable/text_background"
                    android:hint="@string/password"
                    android:padding="10dp"
                    />
            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_passwordlogin"
                android:layout_gravity="end"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="70dp"/>


            <Button
                android:id="@+id/login_button"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:text="@string/log_in"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                android:background="@drawable/background"
                android:textColor="#ffff"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:layout_marginTop="40dp"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary">

            </TextView>

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                />

</LinearLayout>