<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.ChangePassword">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        >
        <ImageView
            android:id="@+id/back_button"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/back_icons"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffff"
            android:layout_centerInParent="true"
            android:textSize="23sp"
            android:textStyle="bold"
            android:text="@string/change_password"
            />
    </RelativeLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="textPassword"
        android:id="@+id/old_password"
        android:hint="@string/old_password"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:padding="10dp"
        android:background="@drawable/text_background"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/new_password"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:inputType="textPassword"
        android:background="@drawable/text_background"
        android:hint="@string/new_password"
        android:padding="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/confirm_pass"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/text_background"
        android:hint="@string/email"
        android:padding="10dp"
        />

    <Button
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:text="@string/save_changes"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/background"
        android:textColor="#ffff"
        />


</LinearLayout>