<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.ProfileFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffff"
            android:layout_centerInParent="true"
            android:textSize="26sp"
            android:textStyle="bold"
            android:text="@string/edit_profile"
            />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
    >
        <ImageView
            android:id="@+id/lock_icon"
            android:layout_width="25dp"
            android:layout_height="22dp"
            android:src="@drawable/edit_profile_lock_icon"
            android:layout_gravity="end"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            />
    <de.hdodenhof.circleimageview.CircleImageView
          android:id="@+id/profile_pic"
          android:layout_width="150dp"
          android:layout_height="150dp"
          android:src="@drawable/name_profile_icon"
          android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_profile_photo"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_cover_photo"
            android:layout_gravity="left"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimary"
            tools:ignore="RtlHardcoded" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/cover_photo_field"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="text"
            android:id="@+id/full_name"
            android:hint="@string/full_name"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:padding="10dp"
            android:background="@drawable/text_background"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/email_address"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/text_background"
            android:hint="@string/email"
            android:padding="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/phone_num"
            android:inputType="phone"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/text_background"
            android:hint="@string/phone_no"
            android:padding="10dp"
            />

        <Button
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/update"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@drawable/background"
            android:textColor="#ffff"
            />
    </LinearLayout>

    </ScrollView>

</LinearLayout>