<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.NotificationFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffff"
            android:layout_centerInParent="true"
            android:textSize="26sp"
            android:textStyle="bold"
            android:text="@string/notifications"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/join_group_request"
        android:textColor="@color/colorPrimary"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="bold" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/group_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="5dp"
        android:text="@string/see_all"
        android:textAllCaps="false"
        android:background="@drawable/button_background"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications_small"
        android:padding="10dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </ScrollView>





</LinearLayout>