<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.CreatePosts">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimary"
            >
            <ImageView
                android:id="@+id/back_button"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:src="@drawable/back_icons"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffff"
                android:layout_centerInParent="true"
                android:textSize="26sp"
                android:textStyle="bold"
                android:text="@string/create_post"
                />
        </RelativeLayout>

            <TextView
                android:id="@+id/description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingStart="20dp"
                android:text="@string/description"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="text"
                android:hint="@string/gosford_hill_school"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:background="@drawable/text_background"
                />


            <TextView
                android:id="@+id/image_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/image"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:inputType="text"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/image_field"
                />

            <Button
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:text="@string/upload"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:background="@drawable/background"
                android:textColor="#ffff"
                />

</LinearLayout>