<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical"
    tools:context=".views.CreateGroup">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimary"
            >
            <ImageView
                android:id="@+id/back_button"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:src="@drawable/back_icons"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffff"
                android:layout_centerInParent="true"
                android:textSize="26sp"
                android:textStyle="bold"
                android:text="@string/create_group"
                />
        </RelativeLayout>

            <TextView
                android:id="@+id/school_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/school_name"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="text"
                android:hint="@string/gosford_hill_school"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:background="@drawable/text_background"
                />


            <TextView
                android:id="@+id/cover_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cover_photo"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:inputType="text"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/cover_photo_field"
                />


            <TextView
                android:id="@+id/privacy_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/school_name"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="text"
                android:hint="@string/choose_privacy"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:background="@drawable/text_background"
                />

            <Button
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:text="@string/create"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                android:background="@drawable/background"
                android:textColor="#ffff"
                />


</LinearLayout>